RESOLVED FIXED133790
Buildfix if LLINT_SLOW_PATH_TRACING is enabled
https://bugs.webkit.org/show_bug.cgi?id=133790
Summary Buildfix if LLINT_SLOW_PATH_TRACING is enabled
Éva Balázsfalvi
Reported 2014-06-12 02:05:18 PDT
After enabling LLINT_SLOW_PATH_TRACING in Source/JavaScriptCore/llint/LLIntCommon.h, I got the following build fail: WebKit/Source/JavaScriptCore/llint/LLIntSlowPaths.cpp:461:73: error: 'class JSC::JSStack' has no member named 'end' JSStack::end() was removed by r159605.
Attachments
Patch (1.77 KB, patch)
2014-06-12 02:07 PDT, Éva Balázsfalvi
no flags
Éva Balázsfalvi
Comment 1 2014-06-12 02:07:50 PDT
Éva Balázsfalvi
Comment 2 2014-07-14 04:51:52 PDT
Could someone review this patch for me? Thanks!
Mark Lam
Comment 3 2014-07-14 11:16:05 PDT
Comment on attachment 232937 [details] Patch r=me
WebKit Commit Bot
Comment 4 2014-07-15 03:50:18 PDT
Comment on attachment 232937 [details] Patch Clearing flags on attachment: 232937 Committed r171104: <http://trac.webkit.org/changeset/171104>
WebKit Commit Bot
Comment 5 2014-07-15 03:50:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.