Buildfix if LLINT_SLOW_PATH_TRACING is enabled https://bugs.webkit.org/show_bug.cgi?id=133790

Patch by Eva Balazsfalvi <evab.u-szeged@partner.samsung.com> on 2014-07-15
Reviewed by Mark Lam.

* llint/LLIntSlowPaths.cpp:
(JSC::LLInt::LLINT_SLOW_PATH_DECL):

Canonical link: https://commits.webkit.org/152867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171104 268f45cc-cd09-0410-ab3c-d52691b4dbfc